trying to fix min-height issue on iOS mobile
trying to fix min-height issue on iOS mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,8 +22,7 @@
 }
 
 #dealer-cards {
-  /* min-height: 142px !important; */
-  height: 142px !important;
+  min-height: 142px;
 }
 
 #action {
@@ -513,6 +512,12 @@ input.reverse {
   }
 
   #display-controls span input#speed { width: 75% !important; }
+  
+  #dealer-cards {
+    height: calc(100vh - calc(100vh - 100%));
+    /* display: list-item; 
+    min-height: inherit; */
+  }
 
 }
 
